# melcloudhome

./: .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEV-SETUP.md  Dockerfile.mock  Dockerfile.test  EXPERIMENTAL-ATW.md  LICENSE  MOCK_SERVER_VALIDATION.md  Makefile  README.md  RESUME-PROMPT-integration-tests.md  RESUME_PROMPT.md  RESUME_PROMPT_entity_naming.md  RESUME_PROMPT_mock_atw.md  SECURITY.md  SUPPORTED_DEVICES.md  check_sensors.py  codecov.yml  docker-compose.dev.yml  docker-compose.test.yml  hacs.json  openapi.yaml  osv-scanner.toml  pyproject.toml  scalar-docs.html  test_auth.py
.claude/: settings.local.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: codeql.yml  coverage.yml  dep-audit.yml  dependabot-auto-merge.yml  lint.yml  release.yml  secret-scan.yml  test.yml  validate.yml  zizmor.yml
_claude/: KNOWN-ISSUES.md  NEXT-STEPS.md  ROADMAP.md  SESSION-HISTORY.md  climate-entity-feature-research.md  ha-integration-requirements.md  melcloudhome-api-discovery.md  melcloudhome-api-reference.md  melcloudhome-integration-guide.md  melcloudhome-knowledge-gaps.md  melcloudhome-schedule-api.md  repository-strategy.md  v1.1-requirements.md  v1.1-simplified-scope.md  websocket-research-defer.md
custom_components/melcloudhome/: README.md  __init__.py  binary_sensor.py  binary_sensor_ata.py  binary_sensor_atw.py  climate.py  climate_ata.py  climate_atw.py  climate_helpers.py  config_flow.py  const.py  const_ata.py  const_atw.py  control_client.py  control_client_ata.py  control_client_atw.py  control_client_base.py  coordinator.py  diagnostics.py  diagnostics_ata.py  diagnostics_atw.py  helpers.py  (+15 more)
dev-config/: .gitkeep
dev-config-template/: README.md  configuration.yaml  secrets.yaml
docs/: README.md  architecture.md  entities.md  integration-review.md  lg-thinq-comparison.md  release-process.md  security-tooling.md  testing-best-practices.md  testing-strategy.md
scripts/: pre-push-block-main.sh
tests/: __init__.py  conftest.py  test_auth.py  test_client_control.py  test_client_validation.py
tools/: README.md  anonymize_har.py  check_device_capabilities.py  check_energy_status.py  compare_upgrade_snapshots.py  debug_energy_api.py  deploy_custom_component.py  dump_device_state.py  dump_state.py  energy_monitoring_recorder.py  find_corrupt_energy_readings.py  ha-dev-init.sh  list_entities.sh  mock_melcloud_server.py  test_atw_mock_server.py  test_energy_accumulation.py  test_energy_endpoint.py  test_mobile_api.py  test_turn_on_off.sh  test_vane_positions.py
(+249 files in other folders)
